--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "neos/neos": "~3.3.0",
         "neos/nodetypes": "~3.3.0",
+        "neos/fusion-afx": "~1.0.0",
         "neos/seo": "*"
     },
     "authors": [
