--- a/Configuration/Routes.yaml
+++ b/Configuration/Routes.yaml
@@ -1,26 +1,22 @@
 -
-  name: 'Neos :: Frontend :: JSON API'
-  uriPattern: '{node}.json'
+  name: 'JSON API'
+  uriPattern: 'api/(v1/){endpoint}.json'
   defaults:
     '@package': Neos.Neos
     '@controller': Frontend\Node
     '@action': show
     '@format': json
-  routeParts:
-    node:
-      handler: Neos\Neos\Routing\FrontendNodeRoutePartHandlerInterface
+    'node': '/sites/duttweilerde'
   appendExceedingArguments: true
 
 -
-  name: 'Neos :: Frontend :: RSS API'
-  uriPattern: '{node}.rss'
+  name: 'RSS API'
+  uriPattern: 'api/(v1/)news.rss'
   defaults:
     '@package': Neos.Neos
     '@controller': Frontend\Node
     '@action': show
     '@format': rss
-  routeParts:
-    node:
-      handler: Neos\Neos\Routing\FrontendNodeRoutePartHandlerInterface
+    'node': '/sites/duttweilerde'
   appendExceedingArguments: true
 
