FIX: Adjust backgroundcolor of the content canvas
This is visible when preview mode 'mobile' is selected. Before the
background was pure white, now it is grey to match the overall appearance of the backend

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -34,6 +34,9 @@ Neos:
         api:
           label: 'Duttweiler - API'
           position: end
+    Ui:
+      contentCanvas:
+        backgroundColor: 'rgb(34, 34, 34)'
     userInterface:
       editPreviewModes:
         mobile:
