TASK: Enable legacy URL for RSS/Atom Feed

--- a/Configuration/Routes.yaml
+++ b/Configuration/Routes.yaml
@@ -16,7 +16,7 @@
     '@package': Neos.Neos
     '@controller': Frontend\Node
     '@action': show
-    '@format': rss
+    '@format': atom
     'node': '/sites/duttweilerde'
   appendExceedingArguments: true
 
