fix(chronik item): require date to be set
When creating a chronik item, require the date.
Weird issues happen if no date is set.

--- a/Configuration/NodeTypes.Pages.yaml
+++ b/Configuration/NodeTypes.Pages.yaml
@@ -197,10 +197,11 @@
             label: Datum
             editor: 'Neos.Neos/Inspector/Editors/TextFieldEditor'
             editorOptions:
-              placeholder: 'dd.mm.yyyy oder frei lassen für heutiges Datum'
+              placeholder: 'dd.mm.yyyy'
           validation:
             'Neos.Neos/Validation/RegularExpressionValidator':
               regularExpression: '^\d{2}\.\d{2}\.\d{4}$'
+            'Neos.Neos/Validation/NotEmptyValidator': []
     inspector:
       groups:
         related:
