fix: allow text alignment
This was disabled by default in earlier versions too, but the old ui
showed it anyways.
With the new ui, it has to be explicitly enabled

--- a/Configuration/NodeTypes.Overrides.yaml
+++ b/Configuration/NodeTypes.Overrides.yaml
@@ -4,6 +4,11 @@
       ui:
         aloha:
           autoparagraph: false
+          alignment:
+            left: true
+            right: true
+            center: true
+            justify: true
 'Neos.NodeTypes:ContentImageMixin':
   properties:
     enableFancybox:
