chore(package): move all the site packages's files to DistributionPackages
This is in preparation to restructuring the repository in accordance
with Neos' best practice to have the whole instance in the repo and
keep specific packages in a subdirectory DistributionPackages

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-.Trash-1000/
-Classes/Service/GcmKeyProvider.php
-Resources/Private/Content/
+DistributionPackages/GSL.DuttweilerDe/Classes/Service/GcmKeyProvider.php
+DistributionPackages/GSL.DuttweilerDe/Resources/Private/Content/
