fix(package): fix uri scheme warning in composer.json

--- a/DistributionPackages/GSL.DuttweilerDe/composer.json
+++ b/DistributionPackages/GSL.DuttweilerDe/composer.json
@@ -12,8 +12,8 @@
       {
         "name": "Jan Syring-Lingenfelder",
         "email": "kontakt@jan-sl.de",
-        "homepage": "www.jan-sl.de",
-        "role": "AiO Developer"
+        "homepage": "https://www.jan-sl.de",
+        "role": "Full stack developer"
       }
     ],
     "autoload": {
