chore(docker): make docker setup production ready
This includes adding nginx to the image as frontend for fpm and using s6
as supervisor. The differences between dev and prod are kept to a
minimum, pretty much just the env vars.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,16 +3,14 @@ version: '3.4'
 services:
   neos:
     build:
-      context: .
-      target: dev
       args: 
         context: development
+    environment: 
+      FLOW_CONTEXT: Development
     ports:
-      - 8081:8081
+      - 80:80
     volumes: 
       - ./composer.json:/neos/composer.json
       - ./composer.lock:/neos/composer.lock
       - ./Configuration/:/neos/Configuration/
       - ./DistributionPackages/:/neos/DistributionPackages/
-    environment:
-      FLOW_CONTEXT: 'Development/Docker'
