fix(docker): clean up logging
The access log is turned off for /_Resources/, and proxy header is
set to forward client ip to neos for correct logging

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -10,6 +10,10 @@ Neos:
     mvc:
       routes:
         Neos.Flow: true
+    log:
+      systemLogger:
+        backendOptions:
+          logIpAddress: true
   Imagine:
     driver: Imagick
     enabledDrivers:
