--- a/nginx-fpm.conf
+++ b/nginx-fpm.conf
@@ -5,8 +5,7 @@ server {
   root   /neos/Web/;
   
   location ~ /_Resources/ {
-    #access_log off;
-    #log_not_found off;
+    access_log off;
     expires max;
 
     #if (!-f $request_filename) {
@@ -27,7 +26,7 @@ server {
     fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
     fastcgi_param  PATH_INFO         $fastcgi_path_info;
     fastcgi_param  FLOW_REWRITEURLS  1;
-    fastcgi_param  X-Forwarded-For   $remote_addr;
+    fastcgi_param  X-Forwarded-For   $proxy_add_x_forwarded_for;
     fastcgi_param  X-Forwarded-Port  $proxy_port;
     fastcgi_param  REMOTE_ADDR       $remote_addr;
     fastcgi_param  REMOTE_PORT       $remote_port;
