feat(docker): use unix socket for nginx/fpm communication

--- a/nginx-fpm.conf
+++ b/nginx-fpm.conf
@@ -21,7 +21,7 @@ server {
   location ~ \.php$ {
     include        /etc/nginx/fastcgi_params;
     try_files      $uri =404;
-    fastcgi_pass   neos:9000;
+    fastcgi_pass   unix:/var/run/nginx-fpm.sock;
     fastcgi_index  index.php;
     fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
     fastcgi_param  PATH_INFO         $fastcgi_path_info;
