fix(docker): set env for Flow to trust proxies (Neos 4.0)
This setting was introduced in Neos 4/Flow 5 to explicitly specify which
proxies setting X-Forwarded headers to trust

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         context: production
     environment: 
       FLOW_CONTEXT: Production
+      # change this to the real traefik ip once we're in production with it
+      FLOW_HTTP_TRUSTED_PROXIES: '*'
     volumes: 
       - data:/neos/Data/Persistent/
     depends_on: 
