--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,11 @@
         "bin-dir": "bin"
     },
     "require": {
-        "neos/neos": "~4.0.0",
-        "neos/nodetypes": "~4.0.0",
+        "neos/neos": "~4.1.0",
+        "neos/nodetypes": "~4.1.0",
         "neos/seo": "~2.0",
         "neos/setup": "~4.0",
-        "neos/neos-ui": "~1.3.0",
-        "neos/neos-ui-compiled": "~1.3.0",
+        "neos/neos-ui": "^1.4",
         "rokka/imagine-vips": "0.*",
         "gsl/duttweilerde": "@dev"
     },
