--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -14,6 +14,11 @@ Neos:
       systemLogger:
         backendOptions:
           logIpAddress: true
+    i18n:
+      defaultLocale: de
+  Neos:
+    userInterface:
+      defaultLanguage: 'de'
   Imagine:
     driver: Imagick
     enabledDrivers:
