fix: allow big file uploads

--- a/nginx-fpm.conf
+++ b/nginx-fpm.conf
@@ -38,5 +38,31 @@ server {
     fastcgi_buffers              256 16k;
     fastcgi_busy_buffers_size    256k;
     fastcgi_temp_file_write_size 256k;
+
+    # large uploads are only allowed on the upload endpoint (see below)
+    client_max_body_size 1M;
+  }
+
+  # allow big uploads on the upload endpoint by *not* overriding client_max_body_size, so the default set in nginx.conf is used
+  location ~ ^/neos/(content|management/media)/upload.* {
+    include        /etc/nginx/fastcgi_params;
+    rewrite        ^(.*)$            /index.php$1 break; # rewrite path to index.php
+    fastcgi_pass   unix:/var/run/nginx-fpm.sock;
+    fastcgi_index  index.php;
+    fastcgi_param  SCRIPT_FILENAME   $document_root/index.php;
+    fastcgi_param  PATH_INFO         $fastcgi_path_info;
+    fastcgi_param  FLOW_REWRITEURLS  1;
+    fastcgi_param  X-Forwarded-For   $proxy_add_x_forwarded_for;
+    fastcgi_param  X-Forwarded-Port  $proxy_port;
+    fastcgi_param  REMOTE_ADDR       $remote_addr;
+    fastcgi_param  REMOTE_PORT       $remote_port;
+    fastcgi_param  SERVER_ADDR       $server_addr;
+    fastcgi_param  SERVER_NAME       $http_host;
+    fastcgi_split_path_info ^(.+\.php)(.*)$;
+    fastcgi_read_timeout         300;
+    fastcgi_buffer_size          128k;
+    fastcgi_buffers              256 16k;
+    fastcgi_busy_buffers_size    256k;
+    fastcgi_temp_file_write_size 256k;
   }
 }
