--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   neos:
-    image: neosduttweilerde
+    image: neosduttweilerde:prod
     build:
       context: .
       args: 
