feat(docker): prepare labels for production

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,7 @@ services:
         context: development
     environment: 
       FLOW_CONTEXT: Development
+    restart: "no"
     ports:
       - 80:80
     volumes: 
@@ -15,3 +16,8 @@ services:
       - ./composer.lock:/neos/composer.lock
       - ./Configuration/:/neos/Configuration/
       - ./DistributionPackages/:/neos/DistributionPackages/
+
+# override public network to be internal, this is traefik in prod
+networks:
+  public:
+    external: false
