--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,14 @@ services:
     depends_on: 
       - db
       - cache
+    restart: unless-stopped
+    labels: 
+      - traefik.enable=true
+      - traefik.http.routers.neos.rule=Host(`duttweiler.de`, `www.duttweiler.de`)
+      - traefik.http.services.neos.loadbalancer.server.port=80
+    networks: 
+      - internal
+      - public
 
   db:
     image: mariadb
@@ -24,11 +32,23 @@ services:
       MYSQL_DATABASE: 'neos'
     volumes: 
       - db:/var/lib/mysql
+    restart: unless-stopped
+    networks:
+      - internal
 
   cache:
     image: redis:alpine
     volumes:
       - cache:/data
+    restart: unless-stopped
+    networks:
+      - internal
+
+networks: 
+  internal:
+    internal: true
+  public:
+    external: true
 
 volumes:
   db:
