fix(site): add legacy rewriting rules

--- a/nginx-fpm.conf
+++ b/nginx-fpm.conf
@@ -15,6 +15,24 @@ server {
   }
 
   location / {
+
+    #-legacy--------------------------------------------
+    # resources
+    rewrite "^(.+)/(.+)\.(gif|jpg|png|pdf)$" "http://static.duttweiler.de/$2.$3" redirect;
+    # chronik pages
+    rewrite "d([0-9x]+[a-z]?).(html?)$" http://static.duttweiler.de/d$1.$2 redirect;
+    # duttweiler-wein pages
+    rewrite "^a-bis-z/w/weinguter/weinp(\d{2})a\.htm$" "http://static.duttweiler.de/weinp$1a.htm" redirect;
+
+    rewrite "imp-dut.html" "/impressum.html" permanent;
+
+    # PDF download shortcuts ?
+    rewrite "^download/(.*).pdf$" "download/$1.html" redirect;
+
+    # URL shortcuts
+    rewrite "^feuerwehr$" "/a-bis-z/v/vereine/feuerwehr.html" redirect;
+    #---------------------------------------------------
+
     try_files $uri /index.php?$args;
   }
 
