fix(nodetypes): add missing delimitiers to regex validators

--- a/DistributionPackages/GSL.DuttweilerDe/Configuration/NodeTypes.Content.yaml
+++ b/DistributionPackages/GSL.DuttweilerDe/Configuration/NodeTypes.Content.yaml
@@ -84,7 +84,7 @@
           group: news
       validation:
         Neos.Neos/Validation/RegularExpressionValidator:
-          regularExpression: '^[0-9]{1,2}:[0-9]{1,2}$'
+          regularExpression: '/^[0-9]{1,2}:[0-9]{1,2}$/'
     scorers:
       type: string
       ui:
